tests/baselines/reference/ES5For-of30(target=es2015).errors.txt
ES5For-of30.ts(3,6): error TS2488: Type 'string | number' must have a '[Symbol.iterator]()' method that returns an iterator.
ES5For-of30.ts(3,7): error TS2322: Type 'number' is not assignable to type 'string'.
ES5For-of30.ts(3,14): error TS2322: Type 'string' is not assignable to type 'number'.


==== ES5For-of30.ts (3 errors) ====
    var a: string, b: number;
    var tuple: [number, string] = [2, "3"];
    for ([a = 1, b = ""] of tuple) {
         ~~~~~~~~~~~~~~~
!!! error TS2488: Type 'string | number' must have a '[Symbol.iterator]()' method that returns an iterator.
          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                 ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        a;
        b;
    }